index for logging and view local machine data
